--- a/index.html
+++ b/index.html
@@ -337,10 +337,10 @@
                 <div class="col-md-6">
                     <div class="text-center text-md-left ml-md-3">
                         <h3 class="mb-4">Why Choose Us?</h3>
-                        <h5 class="mb-3"><i class="fa fa-check text-success mr-2"></i>Vero dolor amet no eos ipsum erat</h5>
-                        <h5 class="mb-3"><i class="fa fa-check text-success mr-2"></i>Lorem tempor tempor gubergren dolor dolor dolor</h5>
-                        <h5 class="mb-3"><i class="fa fa-check text-success mr-2"></i>Nonumy tempor dolores sadipscing duo</h5>
-                        <h5 class="mb-0"><i class="fa fa-check text-success mr-2"></i>Kasd dolor ea dolores ut nonumy</h5>
+                        <h5 class="mb-3"><i class="fa fa-check text-success mr-2"></i>Lightweight, Modern and Aesthetics</h5>
+                        <h5 class="mb-3"><i class="fa fa-check text-success mr-2"></i>backed by important certifications like BIS, ISO,PVIP</h5>
+                        <h5 class="mb-3"><i class="fa fa-check text-success mr-2"></i>We provide Flash test reports to customers</h5>
+                        <h5 class="mb-0"><i class="fa fa-check text-success mr-2"></i>Strongly focus on sustainability and innovation</h5>
                     </div>
                 </div>
                 <div class="col-md-12 text-center pt-3">
