--- a/index.html
+++ b/index.html
@@ -364,16 +364,17 @@
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-center">
                             <img class="img-fluid mx-auto mb-3" src="img/testimonial-1.jpg" style="width: 100px;">
-                            <p style="font-size: 22px;">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
-                            <h4>Client Name</h4>
-                            <span>Profession</span>
+                            <p style="font-size: 22px;">Zero Gravity provided a seamless solar installation process for our home. The team was professional, and the performance of the panels has exceeded our expectations. We're saving on energy bills while doing our part for the environment!</p>
+                            <h4>Rajesh S.</h4>
+                            <span>Homeowner</span>
                         </div>
                         <div class="text-center">
                             <img class="img-fluid mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 100px;">
-                            <p style="font-size: 22px;">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
-                            <h4>Client Name</h4>
-                            <span>Profession</span>
+                            <p style="font-size: 22px;">I’ve worked with several solar providers, but Zero Gravity stands out for its cutting-edge technology and commitment to quality. Their bifacial panels are lightweight and efficient, making them perfect for our commercial building.</p>
+                            <h4>Priya M.</h4>
+                            <span>Business Owner</span>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
