--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="col-lg-7">
                     <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">About Us</h6>
                     <h1 class="display-4 mb-3"><span class="text-primary">25+ Years Experience</span> In Solar Power Industry</h1>
-                    <p>At sed est eirmod sanctus et amet diam magna. Dolore clita magna sed sed stet et, at magna rebum eirmod sanctus ut sed, stet tempor dolore rebum sit duo, dolore tempor sit est sit sanctus, sit justo sit invidunt clita ut justo diam magna. Erat eos nonumy labore dolor. Dolore kasd no et et et elitr. Erat sea dolor elitr diam sed lorem rebum et vero. </p>
+                    <p>Zero Gravity will be the leading provider of high-quality, energy-efficient solar panel solutions. We are specialized in designing, manufacturing, and installing solar power systems for residential, commercial, and industrial applications.We aim to accelerate the transition to clean, renewable energy by offering cutting-edge technology and affordable solutions that reduce carbon footprints and energy costs. </p>
                     <a class="btn btn-primary font-weight-bold py-3 px-5 mt-2" type="button" data-toggle="modal" data-target="#exampleModalLong">Read More</a>
                 </div>
             </div>
