--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                             </div>
                         </div>
                         <div class="col-sm-6 p-0" style="min-height: 300px;">
-                            <img class="position-absolute w-100 h-100" src="img/team-3.jpg" style="object-fit: cover;">
+                            <img class="position-absolute w-100 h-100" src="img/ARNAMlesscolor.jpg" style="object-fit: cover;">
                         </div>
                     </div>
                 </div>
@@ -433,7 +433,7 @@
                     <div class="col-md-4">
                         <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Our Office</h5>
-                            <p class="mb-4 m-md-0">Delhi,India, USA</p>
+                            <p class="mb-4 m-md-0">Delhi,India</p>
                         </div>
                     </div>
                     <div class="col-md-4">
