--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
                     <div class="row m-0">
                         <div class="col-sm-6 p-0 text-center">
                             <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4">
-                                <h5 class="mb-2">Thomas Olsen</h5>
-                                <p class="text-muted font-italic mb-2">Engineer</p>
-                                <p>Lorem elitr magna stet rebum dolores sed. Est stet labore est lorem lorem</p>
+                                <h5 class="mb-2">Arnam Chaurasiya</h5>
+                                <p class="text-muted font-italic mb-2">Investor</p>
+                                <p>Being a responsible investor..When I see Apurv Bhai I invest Blindly ;)</p>
                                 <div class="position-relative mb-2">
                                     <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-twitter"></i></a>
                                     <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-facebook-f"></i></a>
