favicon index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/logowitourbg.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -110,7 +110,7 @@
                 </div>
                 <div class="col-lg-7">
                     <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">About Us</h6>
-                    <h1 class="display-4 mb-3"><span class="text-primary">25+ Years Experience</span> In Solar Power Industry</h1>
+                    <h1 class="display-4 mb-3">In Solar Power Industry</h1>
                     <p>Zero Gravity will be the leading provider of high-quality, energy-efficient solar panel solutions. We are specialized in designing, manufacturing, and installing solar power systems for residential, commercial, and industrial applications.We aim to accelerate the transition to clean, renewable energy by offering cutting-edge technology and affordable solutions that reduce carbon footprints and energy costs. </p>
                     <a class="btn btn-primary font-weight-bold py-3 px-5 mt-2" type="button" data-toggle="modal" data-target="#exampleModalLong">Read More</a>
                 </div>
