team index.html

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                             <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4">
                                 <h5 class="mb-2">Soham Bhardwaj</h5>
                                 <p class="text-muted font-italic mb-2">CEO & Founder</p>
-                                <p>visionary and very enegetic guy. yeeeyyyyyy</p>
+                                <p>Visionary leader dedicated to driving innovation in renewable energy</p>
                                 <div class="position-relative mb-2">
                                     <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-twitter"></i></a>
                                     <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -259,7 +259,7 @@
                             <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4">
                                 <h5 class="mb-2">Apurv Goel</h5>
                                 <p class="text-muted font-italic mb-2">CEO & Founder</p>
-                                <p>little pookie and cutiepie muah</p>
+                                <p>Dynamic entrepreneur focused on delivering cutting-edge solar solutions</p>
                                 <div class="position-relative mb-2">
                                     <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-twitter"></i></a>
                                     <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -277,7 +277,7 @@
                             <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4">
                                 <h5 class="mb-2">Arnam Chaurasiya</h5>
                                 <p class="text-muted font-italic mb-2">Investor</p>
-                                <p>Being a responsible investor..When I see Apurv Bhai I invest Blindly ;)</p>
+                                <p>Forward-thinking strategist committed to fostering innovation in renewable energy</p>
                                 <div class="position-relative mb-2">
                                     <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-twitter"></i></a>
                                     <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-facebook-f"></i></a>
