links index.html

--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
                                 <p class="text-muted font-italic mb-2">CEO & Founder</p>
                                 <p>Visionary leader dedicated to driving innovation in renewable energy</p>
                                 <div class="position-relative mb-2">
-                                    <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-outline-primary btn-square mr-1" href="https://www.instagram.com/souwum/"><i class="fab fa-twitter"></i></a>
+                                    <a class="btn btn-outline-primary btn-square mr-1" href="https://www.instagram.com/souwum/"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-outline-primary btn-square mr-1" href="https://www.instagram.com/souwum/"><i class="fab fa-linkedin-in"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -261,9 +261,9 @@
                                 <p class="text-muted font-italic mb-2">CEO & Founder</p>
                                 <p>Dynamic entrepreneur focused on delivering cutting-edge solar solutions</p>
                                 <div class="position-relative mb-2">
-                                    <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-outline-primary btn-square mr-1" href="https://www.instagram.com/apurv__goel/"><i class="fab fa-twitter"></i></a>
+                                    <a class="btn btn-outline-primary btn-square mr-1" href="https://www.instagram.com/apurv__goel/"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-outline-primary btn-square mr-1" href="https://www.instagram.com/apurv__goel/"><i class="fab fa-linkedin-in"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -279,9 +279,9 @@
                                 <p class="text-muted font-italic mb-2">Investor</p>
                                 <p>Forward-thinking strategist committed to fostering innovation in renewable energy</p>
                                 <div class="position-relative mb-2">
-                                    <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-outline-primary btn-square mr-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-outline-primary btn-square mr-1" href="https://www.instagram.com/arnamchaurasiya/"><i class="fab fa-twitter"></i></a>
+                                    <a class="btn btn-outline-primary btn-square mr-1" href="https://www.instagram.com/arnamchaurasiya/"><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-outline-primary btn-square mr-1" href="https://www.instagram.com/arnamchaurasiya/"><i class="fab fa-linkedin-in"></i></a>
                                 </div>
                             </div>
                         </div>
